Finished positioning assignment

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="WWR/index.html"><h1>White Water Rafting Home</h1></a>
+    <a href="positioning.html"><h1>Positioning</h1></a>
 </body>
 </html>
