Added Personal Site Plan

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="WWR/index.html"><h1>White Water Rafting Home</h1></a>
     <a href="positioning.html"><h1>Positioning</h1></a>
+    <a href="DogTraining/site-plan.html"><h1>Personal Site Project-Plan</h1></a>
 </body>
 </html>
