--- a/WWR/index.html
+++ b/WWR/index.html
@@ -13,7 +13,7 @@
             <a href="index.html" id="logo-link"><img src="images/logo.png" alt="Dry Oar Logo" class="logo"></a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactUs.html">Contact Us</a>
             </nav>
