--- a/DogTraining/site-plan.html
+++ b/DogTraining/site-plan.html
@@ -124,29 +124,71 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to Aarons Dog Training. Here you can find all the resources you need to get your pup start on the right track!
+        On our training page you'll find all of the basic commands and how to teach them to your dog. 
+        If you need some extra help, or want us to teach your dog more advanced tricks, You can reach us at our contact page!
+        
+        We believe that every dog lives his best life when he can understand, and be understood by, his owner.
+
+        Dogs of all ages and all sizes are welcome. Despite the old saying, you can teach an old dog new tricks!
+
+        Give your dog his best life. Strengthen your bond together with our unique training program customized with your dog in mind.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/hanging-tongue-syndrome.jpg" alt="image for homepage">
+        <img src="images/portrait-adorable-labrador-retriever-posing-isolated-white-studio-background-concept-motion-action-pet-s-love-dynamic.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Training Tips</h3>
+      <h5>Sit</h5>
       <p>
-        [Written copy for the Page 2 here]
+        Teaching a dog to sit can be easy for some dogs, and difficult for others. 
+        If your dog is naturally inclined to sit while idle, he will be able to pick up doing on command quickly.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <ul>
+        <li>Get some delicious training treats.</li>
+        <li>Give the command: "Sit".</li>
+        <li>Wait for your dog to sit.</li>
+        <li>praise and reward.</li>
+        <li>Increase difficulty by waiting longer between them sitting and getting a reward.</li>
+      </ul>
+      <p>
+        If your dog takes a long time to sit after you give them the command, dont worry! 
+        Wait patiently, dont repeat the command too quickly. If more than 30 seconds has passed, try again. 
+        If after three times youve given the command and waited and he still hasn't sat, redirect your puppy to something else for a short period, and try again. 
+        Once your puppy gets it the first time, they'll get it quicker the second, third, and fourth time.
+      </p>
+      <h5>Stay</h5>
+      <P>Just like with sit, this command will be easier for some dogs than others. Patience is key!</P>
+      <ul>
+        <li>Get some delicious treats.</li>
+        <li>Stand close to your dog, facing him directly.</li>
+        <li>Give the command: "stay".</li>
+        <li>Take a step back.</li>
+        <li>Wait a second.</li>
+        <li>Step forward, praise and reward.</li>
+        <li>Increase difficulty by steping farther away, and/or turning around and walking away.</li>
+      </ul>
+      <p>If your dog continues to follow you when you take the first step, try taking a smaller step, or a fake step.
+        Increase difficulty further by leaving the treat in front of him and stepping back. Give them an additional, higher quality treat when you step forward if you do this method.
+      </p>
+      <p>Images for the training page</p>
+        <img src="images/pug-dog-isolated-white-background.jpg" alt="image for page">
+        <img src="images/73960.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Us!</h3>
       <p>
-        [Written copy for the Page 3 here]
+        If you and your pup are ready to take it to the next level, or if you just need some help getting started, you're in the right place!
+        Get in touch with us via email at: dogtraining@notarealdomain.com or call us at 208-555-5555. We look forward to hearing from you, and we hope your dog enjoys the pawesome training program customized just for him!
+        
+        Refer friends using this page and both of you get a free bag of training treats at your next visit. Everypuppy loves free treats!
+
+        Have and experience youd like to share? Let us know how we're doing! Reach using our social links below to share videos of your dog showcasing what theyve learned.
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the contact us page</p>
+        <img src="images/dog-treat-packaging-mockup-front-and-back-view.jpg" alt="image for page3">
+        <img src="images/adorable-brown-white-basenji-dog-smiling-giving-high-five-isolated-white.jpg" alt="image for page3">
 
       </ul>
       <hr>
