--- a/WWR/rivers.html
+++ b/WWR/rivers.html
@@ -5,8 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Rivers</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <img src="images/WWR Subpage Wireframe.jpg" width="100%" height="100%">
+    <div id="content">
+        <header>
+            <a href="index.html" id="logo-link"><img src="images/logo.png" alt="Dry Oar Logo" class="logo"></a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="rivers.html">Rivers</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactUs.html">Contact Us</a>
+            </nav>
+        </header>
+        <main>
+            <div class="river-list">
+                <h1>Choose Your Adventure</h1>
+                <div class="river-item">
+                    <h2>Main Fork of the Salmon River, Idaho</h2>
+                    <div class="river-content">
+                        <p>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.
+                            <br><br>
+                            Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.
+                            <br><br>
+                            Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.
+                        </p>
+                        <img src="images/rafting61_1024.jpg" alt="A peaceful, tree lined river." class="river-img">
+                    </div>
+                    <button class="book">Book Now</button>
+                </div>
+                <div class="river-item">
+                    <h2>Desolation and Gray Canyon, Utah</h2>
+                    <div class="river-content">
+                        <p>Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.
+                            <br><br>
+                            Desolation is rated a Class II/III and is usually done in 6 days
+                            <br><br>
+                            Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.
+                        </p>
+                        <img src="images/river-evening.jpg" alt="A peacful canyon river at sunset." class="river-img">
+                    </div>
+                    <button class="book">Book Now</button>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <p>Dry Oar &copy; 2022 - Aaron Rooks</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
