added dog training site plan wire frames

--- a/DogTraining/site-plan.html
+++ b/DogTraining/site-plan.html
@@ -127,11 +127,11 @@
         Welcome to Aarons Dog Training. Here you can find all the resources you need to get your pup start on the right track!
         On our training page you'll find all of the basic commands and how to teach them to your dog. 
         If you need some extra help, or want us to teach your dog more advanced tricks, You can reach us at our contact page!
-        
+        <br><br>
         We believe that every dog lives his best life when he can understand, and be understood by, his owner.
-
+        <br><br>
         Dogs of all ages and all sizes are welcome. Despite the old saying, you can teach an old dog new tricks!
-
+        <br><br>
         Give your dog his best life. Strengthen your bond together with our unique training program customized with your dog in mind.
       </p>
       <p>Images for the Home page</p>
@@ -195,9 +195,10 @@
       <h2>
         Wireframes
       </h2>
-      <p>
-        Create three wireframes for your site. One for each page and list them here</p>
-
+      <p>Create three wireframes for your site. One for each page and list them here</p>
+      <img src="images/Site wireframes.jpg" alt="main page wireframe">
+      <img src="images/Site wireframes2.jpg" alt="Training page wireframe">
+      <img src="images/Site wireframes3.jpg" alt="contact page wireframe">
       <h3>Home</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
