added css for dog traiing home page

--- a/DogTraining/training.html
+++ b/DogTraining/training.html
@@ -10,7 +10,7 @@
     <body>
         <nav>
             <div class="nav-item" id="site-logo"><a href="index.html"><img
-                        src="#" alt="Logo" class="logo"></a></div>
+                        src="images/Logo.jpg" alt="Logo" class="logo"></a></div>
             <a href="training.html" class="nav-item">Training Tips</a>
             <a href="contact.html" class="nav-item">Contact Us</a>
         </nav>
@@ -87,9 +87,10 @@
         <footer>
             <p>&copy; 2022 Aaron Rooks</p>
             <div id="social-links">
-                <a href="#" class="social-icon"><img src="#" alt="Facebook"></a>
-                <a href="#" class="social-icon"><img src="#" alt="Twitter"></a>
-                <a href="#" class="social-icon"><img src="#" alt="Instagram"></a>
+                <a href="site-plan.html">Site Plan</a>
+                <a href="#" class="social-icon"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="#" class="social-icon"><img src="images/twitter.png" alt="Twitter"></a>
+                <a href="#" class="social-icon"><img src="images/instagram.png" alt="Instagram"></a>
             </div>
         </footer>
     </body>
