--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dropdown.css">
     <title>Aaron Rooks - WDD130 Projects</title>
 </head>
 <body>
-    <a href="WWR/index.html"><h1>White Water Rafting Home</h1></a>
-    <a href="positioning.html"><h1>Positioning</h1></a>
-    <a href="DogTraining/site-plan.html"><h1>Personal Site Project-Plan</h1></a>
+    
+    <div class="dropdown">
+        <button class="dropbtn">Menu</button>
+        <div class="dropdown-content">
+            <a href="index.html">Main Page</a>
+            <a href="WWR/index.html">White Water Rafting</a>
+            <a href="DogTraining/index.html">Personal Site</a>
+            <a href="DogTraining/site-plan.html">Personal Site Plan</a>
+            <a href="positioning.html">Positioning</a>
+            <a href="components.html">Components</a>
+        </div>
+    </div>
 </body>
 </html>
