added final subpage

--- a/DogTraining/contact.html
+++ b/DogTraining/contact.html
@@ -21,7 +21,7 @@
         </div>
         <main>
             <div class="contact-content-container">
-                <div class="contact-content-box">
+                <div class="contact-content-box-one contact-content-box">
                     <p>
                         If you and your pup are ready to take it to the next
                         level, or if you just need some help getting started,
@@ -38,7 +38,7 @@
                         videos of your dog showcasing what theyve learned.
                     </p>
                 </div>
-                <div class="contact-content-box">
+                <div class="contact-content-box-two contact-content-box">
                     <p>
                         Refer friends using this page and both of you get a free
                         bag of training treats at your next visit. Everypuppy
